WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156184
[wincairo] web inspector failed to launch in MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=156184
Summary
[wincairo] web inspector failed to launch in MiniBrowser
Bill Ming
Reported
2016-04-04 15:25:09 PDT
When launching web inspector within MiniBrowser, an error shows up saying "Web Inspector encountered an internal error" The reason of this issue is that, universal access to file url is set to false so that an exception will be throw when inspector trying to access localstorage. Set it to true solves this problem. Mac porting of Minibrowser also sets it to true btw.
Attachments
Patch
(1.32 KB, patch)
2016-04-04 15:32 PDT
,
Bill Ming
bburg
: review+
joepeck
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.74 KB, patch)
2016-05-08 23:33 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-04-04 15:25:46 PDT
<
rdar://problem/25539297
>
Bill Ming
Comment 2
2016-04-04 15:32:07 PDT
Created
attachment 275581
[details]
Patch
Blaze Burg
Comment 3
2016-04-04 15:46:10 PDT
Comment on
attachment 275581
[details]
Patch rs=me Note: in the future, we want to move off file:// URLs and use a custom scheme so the inspector process needs fewer sandbox entitlements.
Bill Ming
Comment 4
2016-04-07 01:04:56 PDT
Thanks. If that happens someday, I hope I could help on that.
Bill Ming
Comment 5
2016-04-14 05:03:41 PDT
So, is it good to merge?
Fujii Hironori
Comment 6
2016-04-26 20:30:10 PDT
Bill, You did not set commit-queue:? flag.
https://webkit.org/contributing-code/#optional-use-of-the-webkit-commit-bot
Joseph Pecoraro
Comment 7
2016-05-04 11:00:13 PDT
Comment on
attachment 275581
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275581&action=review
> Tools/MiniBrowser/win/MiniBrowser.cpp:199 > - m_prefsPrivate->setAllowUniversalAccessFromFileURLs(FALSE); > + m_prefsPrivate->setAllowUniversalAccessFromFileURLs(TRUE);
Errr, why is MiniBrowser be setting this preference? I think it should be the Web Inspector on Windows that should be setting it. Is this a WebKit1 window, or WebKit2?
Joseph Pecoraro
Comment 8
2016-05-04 11:06:04 PDT
Comment on
attachment 275581
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275581&action=review
>> Tools/MiniBrowser/win/MiniBrowser.cpp:199 >> + m_prefsPrivate->setAllowUniversalAccessFromFileURLs(TRUE); > > Errr, why is MiniBrowser be setting this preference? I think it should be the Web Inspector on Windows that should be setting it. Is this a WebKit1 window, or WebKit2?
If this is WebKit1 could this preference be set in: Source/WebKit/win/WebCoreSupport/WebInspectorClient.cpp - WebInspectorClient::openLocalFrontend If this is WebKit2, other ports set this in their inspector page configuration in: Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm - WebInspectorProxy::platformCreateInspectorPage Source/WebKit2/UIProcess/mac/WebInspectorProxyEfl.cpp - WebInspectorProxy::platformCreateInspectorPage Perhaps this should be added to other ports (gtk) as well. cq- while the question gets answered.
Fujii Hironori
Comment 9
2016-05-08 23:30:54 PDT
Thank you for review. WebKit1 Mac port has following code in Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:
> [preferences setAllowFileAccessFromFileURLs:YES]; > [preferences setAllowUniversalAccessFromFileURLs:YES];
Fujii Hironori
Comment 10
2016-05-08 23:33:17 PDT
Created
attachment 278387
[details]
Patch
WebKit Commit Bot
Comment 11
2016-05-09 09:27:52 PDT
Comment on
attachment 278387
[details]
Patch Clearing flags on attachment: 278387 Committed
r200577
: <
http://trac.webkit.org/changeset/200577
>
Joseph Pecoraro
Comment 12
2016-05-09 13:41:38 PDT
Nice! Thanks for re-addressing this!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug