[wincairo] web inspector failed to launch in MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=156184 <rdar://problem/25539297>

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2016-05-09
Reviewed by Alex Christensen.

* WebCoreSupport/WebInspectorClient.cpp:
(WebInspectorClient::openLocalFrontend): Enable
AllowFileAccessFromFileURLs and AllowUniversalAccessFromFileURLs
of WebPreferences for Web Inspector.

Canonical link: https://commits.webkit.org/175608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200577 268f45cc-cd09-0410-ab3c-d52691b4dbfc